# CS490-FinalProject

./: .gitignore  Cargo.toml  config.json
compression_service/: Cargo.toml  Dockerfile  Rocket.toml
compression_service/src/: main.rs
file_service/: Cargo.toml  Dockerfile  Rocket.toml
file_service/src/: main.rs
s3_service/: Cargo.toml  Dockerfile  Rocket.toml
s3_service/src/: main.rs
src/: main.rs
