[package]
name = "cs490_final_project"
version = "0.1.0"
authors = ["Nicholas Rose <nicholasgr44@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]
[dependencies.serde]
version = "1.0.125"
features = ["derive"]