[package]
name = "cs490_compression_service"
version = "0.1.0"
authors = ["Nicholas Rose <nicholasgr44@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
flate2 = "1.0.20"
regex = "1.4.6"
[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]