[package]
name = "compression_service"
version = "0.1.0"
authors = ["Nicholas Rose <nicholasgr44@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
flate2 = "1.0.20"
regex = "1.4.6"
