[package]
name = "file_service"
version = "0.1.0"
authors = ["Nicholas Rose <nicholasgr44@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
regex = "1.4.6"
anyhow = "1.0.40"
[dependencies.reqwest]
version = "0.11.3"
features = ["stream"]
