[package]
name = "s3_service"
version = "0.1.0"
authors = ["Nicholas Rose <nicholasgr44@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rust-s3 = "0.26.4"
