[package]
name = "s3_service"
version = "0.1.0"
authors = ["Nicholas Rose <nicholasgr44@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rust-s3 = { git = "https://github.com/durch/rust-s3", branch = "master" }
rust-s3 = { git = "https://github.com/durch/rust-s3", branch = "master" }
anyhow = "1.0.40"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
# async-std = "1.9.0"
